--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
 
       <nav aria-label="Primária">
         <ul class="header-menu font-1-m cor-0">
@@ -47,7 +47,7 @@
 
     <ul>
       <li>
-        <a href="./bicicletas/magic.hmtl">
+        <a href="./bicicletas/magic.html">
           <img src="/img/bicicletas/magic-home.jpg" alt="Bicicleta Preta">
           <h3 class="font-1-xl">Magic Might</h3>
           <span class="font-2-m cor-8">R$ 2499</span>
@@ -55,7 +55,7 @@
       </li>
 
       <li>
-        <a href="./bicicletas/nimbus.hmtl">
+        <a href="./bicicletas/nimbus.html">
           <img src="/img/bicicletas/nimbus-home.jpg" alt="Bicicleta Preta">
           <h3 class="font-1-xl">Nimbus Stark</h3>
           <span class="font-2-m cor-8">R$ 4999</span>
@@ -63,7 +63,7 @@
       </li>
 
       <li>
-        <a href="./bicicletas/nebula.hmtl">
+        <a href="./bicicletas/nebula.html">
           <img src="/img/bicicletas/nebula-home.jpg" alt="Bicicleta Preta">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
