--- a/bicicletas.html
+++ b/bicicletas.html
@@ -17,7 +17,7 @@
 
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
 
       <nav aria-label="Primária">
         <ul class="header-menu font-1-m cor-0">
