--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições.">
-  <title>Termos e Condições | Bickcraft</title>
+  <title>Contato | Bickcraft</title>
 
   <link rel="stylesheet" href="/css/style.css">
 
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:wght@400;600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
-<body id="termos">
+<body id="contato">
 
   <header class="header-bg">
     <div class="header container">
@@ -32,8 +32,8 @@
   <main>
     <div class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-l-b cor-5">Termos de Uso</p>
-        <h1 class="font-1-xxl cor-0">termos e condições<span class="cor-p1">.</span></h1>
+        <p class="font-2-l-b cor-5">respostas em até 24h</p>
+        <h1 class="font-1-xxl cor-0">nosso contato<span class="cor-p1">.</span></h1>
       </div>
     </div>
 
