--- a/contato.html
+++ b/contato.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Termos e condições.">
-  <title>Contato | Bickcraft</title>
+  <title>Bicicletas | Bikcraft</title>
+  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
 
   <link rel="stylesheet" href="/css/style.css">
+
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,12 +16,12 @@
 </head>
 
 <body id="contato">
-
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft"></a>
-
-      <nav aria-label="Primária">
+      <a href="./">
+        <img src="./img/bikcraft.svg" alt="Bikcraft" width="136" height="32">
+      </a>
+      <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
@@ -30,29 +32,89 @@
   </header>
 
   <main>
-    <div class="titulo-bg">
-      <div class="titulo container">
-        <p class="font-2-l-b cor-5">respostas em até 24h</p>
+    <div class="titulo">
+      <div class="container">
+        <p class="font-2-l-b cor-5">Respostas em até 24h</p>
         <h1 class="font-1-xxl cor-0">nosso contato<span class="cor-p1">.</span></h1>
       </div>
     </div>
 
-    <div class="termos container font-2-s cor-10">
-      <h2 class="font-1-l cor-11">1. Política de Estorno</h2>
-      <p>1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <p>1.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <p>1.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <h2 class="font-1-l cor-11">2. Conta do Usuário</h2>
-      <p>2.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <p>2.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <p>2.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <h2 class="font-1-l cor-11">3. Seguro Bikcraft</h2>
-      <p>3.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <p>3.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <p>3.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-
+    <div class="contato container">
+      <section class="contato-dados" aria-label="Endereço">
+        <h2 class="cor-0 font-1-m">Loja Online</h2>
+        <div class="contato-endereco font-2-s cor-4">
+          <p>Rua Ali Perto, 35</p>
+          <p>Rio de Janeiro - RJ</p>
+          <p>Brasil - Terra - Vita Láctea</p>
+        </div>
+        <address class="contato-meios font-2-s cor-4">
+          <a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a>
+          <a href="mailto:assistencia@bikcraft.com">assistencia@bikcraft.com</a>
+          <a href="tel:+552199999999">+55 21 9999-9999</a>
+        </address>
+        <div class="contato-redes">
+          <a href="./"><img src="./img/redes/instagram-p.svg" alt="Instagram"></a>
+          <a href="./"><img src="./img/redes/facebook-p.svg" alt="Facebook"></a>
+          <a href="./"><img src="./img/redes/youtube-p.svg" alt="Youtube"></a>
+        </div>
+      </section>
+      <section class="contato-formulario" aria-label="Formulário">
+        <form class="form" action="./">
+          <div>
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome" placeholder="Seu nome">
+          </div>
+          <div>
+            <label for="telefone">Telefone</label>
+            <input type="text" id="telefone" name="telefone" placeholder="(21) 9999-9999">
+          </div>
+          <div class="col-2">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="contato@email.com">
+          </div>
+          <div class="col-2">
+            <label for="mensagem">Mensagem</label>
+            <textarea id="mensagem" name="mensagem" placeholder="O que você precisa?" rows="5"></textarea>
+          </div>
+          <button class="botao col-2">Enviar Mensagem</button>
+        </form>
+      </section>
     </div>
   </main>
+
+  <article class="lojas container">
+    <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
+    <div class="lojas-item">
+      <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço da loja no Rio de Janeiro" width="560" height="260">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">Rio de Janeiro</h3>
+        <div class="lojas-dados font-2-s cor-8">
+          <p>Rua Ali Perto, 25</p>
+          <p>Rio de Janeiro - RJ</p>
+        </div>
+        <div class="lojas-dados font-2-s cor-8">
+          <a href="mailto:rio@bikcraft.com">rio@bikcraft.com</a>
+          <a href="tel:+552199999999">21 9999-9999</a>
+        </div>
+        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg à dom</p>
+      </div>
+    </div>
+    <div class="lojas-item">
+      <img src="./img/lojas/sp.jpg" alt="mapa marcando o endereço da loja no Rio de Janeiro">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">São Paulo</h3>
+        <div class="lojas-dados font-2-s cor-8">
+          <p>Rua Ali Perto, 25</p>
+          <p>São Paulo - SP</p>
+        </div>
+        <div class="lojas-dados font-2-s cor-8">
+          <a href="mailto:rio@bikcraft.com">sp@bikcraft.com</a>
+          <a href="tel:+551199999999">11 9999-9999</a>
+        </div>
+        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg à dom</p>
+      </div>
+    </div>
+  </article>
 
   <footer class="footer-bg">
     <div class="footer container">
@@ -60,21 +122,15 @@
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
-          <li><a href="tel:+552199999999">+55 21 9999-9999</a></li>
-          <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+          <li>+55 21 9999-9999</li>
+          <li>contato@bikcraft.com</li>
           <li>Rua Ali Perto, 42 - Botafogo</li>
           <li>Rio de Janeiro - RJ</li>
         </ul>
         <div class="footer-redes">
-          <a href="./">
-            <img src="./img/redes/instagram.svg" alt="Instagram">
-          </a>
-          <a href="./">
-            <img src="./img/redes/facebook.svg" alt="Facebook">
-          </a>
-          <a href="./">
-            <img src="./img/redes/youtube.svg" alt="Youtube">
-          </a>
+          <a href="./"><img src="./img/redes/instagram.svg" alt="Instagram"></a>
+          <a href="./"><img src="./img/redes/facebook.svg" alt="Facebook"></a>
+          <a href="./"><img src="./img/redes/youtube.svg" alt="Youtube"></a>
         </div>
       </div>
       <div class="footer-informacoes">
@@ -88,9 +144,11 @@
           </ul>
         </nav>
       </div>
-      <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
+      <p class="font-2-m cor-6 footer-copy">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
