--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Magic Might | Bikcraft</title>
-  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+  <title>Magic | Bikcraft</title>
+  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
 
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 
@@ -36,18 +36,18 @@
   <main class="bicicleta-bg">
     <div class="bicicleta container">
       <div class="bicicleta-titulo">
-        <span class="font-2-xl cor-5">R$ 2499</span>
+        <span class="font-2-xl cor-5">R$ 4999</span>
         <h1 class="font-1-xxl cor-0">Magic Might<span class="cor-p1">.</span></h1>
       </div>
       <div class="bicicleta-imagens">
         <img src="../img/bicicleta/nimbus2.jpg" alt="Bicicleta preta" width="560" height="440">
-        <img src="../img/bicicleta/nimbus1.jpg" alt="Bicicleta branca" width="560" height="440">
-        <img src="../img/bicicleta/nimbus3.jpg" alt="Bicicleta preta" width="560" height="440">
+        <img src="../img/bicicleta/nimbus1.jpg" alt="Bicicleta preta" width="560" height="440">
+        <img src="../img/bicicleta/nimbus3.jpg" alt="Bicicleta branca" width="560" height="440">
       </div>
       <div class="bicicleta-conteudo">
-        <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <p class="font-2-l cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
-          <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nimbus">Comprar Agora</a>
+          <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=magic">Comprar Agora</a>
           <span class="font-1-xs cor-6"><img src="../img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
           <span class="font-1-xs cor-6"><img src="../img/icones/estoque.svg" alt=""> 18 em estoque</span>
         </div>
@@ -60,7 +60,7 @@
           </li>
           <li>
             <img src="../img/icones/velocidade.svg" alt="">
-            <h3 class="font-1-m cor-0">50 km/h</h3>
+            <h3 class="font-1-m cor-0">45 km/h</h3>
             <p class="font-2-xs cor-5">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
           </li>
           <li>
